[gd_scene load_steps=11 format=3 uid="uid://bgdv1wds5v245"]

[ext_resource type="Script" uid="uid://buwk5x60p6tu4" path="res://Levels/Main Menu/scripts/Options_Menu.gd" id="1_3u7ui"]
[ext_resource type="FontFile" uid="uid://cj477dq342a0c" path="res://Assets/Chewy-Regular.ttf" id="1_4nol8"]
[ext_resource type="Texture2D" uid="uid://3gfvfoy1c7ag" path="res://Assets/EllieBackground.png" id="3_8o45p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3u7ui"]
bg_color = Color(0.893785, 0.476644, 0.118473, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8o45p"]
bg_color = Color(0.893785, 0.476644, 0.118473, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r66rq"]
bg_color = Color(0.893785, 0.476644, 0.118473, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwo81"]
bg_color = Color(0.893785, 0.476644, 0.118473, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo46p"]
bg_color = Color(1, 0.6, 0.2, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.8, 0.2, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_faac8"]
bg_color = Color(1, 0.6, 0.2, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.8, 0.2, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emoij"]
bg_color = Color(0.893785, 0.476644, 0.118473, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_3u7ui")

[node name="ConstructionSite" type="Sprite2D" parent="."]
position = Vector2(101, 101)
scale = Vector2(0.762587, 0.638313)
texture = ExtResource("3_8o45p")
offset = Vector2(640, 360)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 111.0
offset_top = 195.5
offset_right = 289.0
offset_bottom = 604.5
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="Options" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4nol8")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3u7ui")
text = "Options
"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4nol8")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_8o45p")
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VolumeLabel"]
layout_mode = 0
offset_left = 4.0
offset_top = 43.5
offset_right = 171.0
offset_bottom = 59.5
min_value = -30.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4nol8")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_r66rq")
text = "Audio Speed
"

[node name="SpeedSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2/SpeedLabel"]
layout_mode = 0
offset_left = 1.0
offset_top = 87.5
offset_right = 168.0
offset_bottom = 103.5
min_value = 0.75
max_value = 1.5
step = 0.05
value = 0.75

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4nol8")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_bwo81")
text = "Text Scaling
"

[node name="TextSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3/TextLabel"]
layout_mode = 0
offset_left = 1.0
offset_top = 87.5
offset_right = 168.0
offset_bottom = 103.5
min_value = 0.5
max_value = 2.5
step = 0.1
value = 0.8

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4nol8")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_uo46p")
theme_override_styles/hover = SubResource("StyleBoxFlat_faac8")
theme_override_styles/normal = SubResource("StyleBoxFlat_emoij")
text = "Back
"
